--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "server-side",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/gduartemenezes/open-marketv2.git",
-  "author": "Gustavo Duarte <gduartemenezes@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5"
-  }
+    "name": "server-side",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "https://github.com/gduartemenezes/open-marketv2.git",
+    "author": "Gustavo Duarte <gduartemenezes@gmail.com>",
+    "license": "MIT",
+    "devDependencies": {
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-base": "^14.1.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-prettier": "^3.1.3",
+        "nodemon": "^2.0.4",
+        "prettier": "^2.0.5",
+        "sucrase": "^3.15.0"
+    },
+    "dependencies": {
+        "express": "^4.17.1"
+    },
+    "scripts": {
+        "dev": "nodemon src/server.js"
+    }
 }
