--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "sucrase": "^3.15.0"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "express": "^4.17.1",
         "pg": "^8.2.1",
         "pg-hstore": "^2.3.3",
